--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ mastodon:
 theme: minima
 plugins:
   - jekyll-feed
-permalink: /:day/:month/:year/:title:output_ext
+permalink: /:year/:month/:day/:title:output_ext
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
