--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Dan Cocos - Fractional CTO, tech leader 
   Please feel free to email with potential opportunities.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://dancocos." # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dancocos.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  dancocos
 linkedin_username: DanCocos
 mastodon:
