--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Dan Cocos - Tech Leader
+title: Dan Cocos - Tech Leadership
 email: dan@dancocos.com
 description: >- # this means to ignore newlines until "baseurl:"
   Dan Cocos - Fractional CTO, tech leader 
